# shmemo

./: Cargo.toml  README.md  TODO.md  manifest.scm
.github/workflows/: ci-guix.yml  ci.yml
src/: cache.rs  digest.rs  error.rs  executor.rs  logger.rs  main.rs  memo.rs  shmemo.rs
tests/: integration_test.rs
