[package]
name = "memo"
version = "0.0.0-placeholder"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
thiserror = "2.0"
log = "0.4"
humantime = "2.3.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
shell-words = "1.1"
regex = "1.12.2"

[build-dependencies]
anyhow = "1.0.100"
vergen-gitcl = { version = "9.1", features = ["build", "cargo", "rustc", "si"] }
